# zowe-cli

./: .codecov.yml  .editorconfig  .eslintrc.js  .gitattributes  .gitignore  .madgerc  .npmrc  .npmrc.bak  .nsprc  CHANGELOG.md  CONTRIBUTING.md  IMPLEMENTATION_STATUS.md  JR897694.ZOSFILE.DOWNLOAD.A8747183.A70397  Jenkinsfile  Jenkinsfile.old  README.md  RELEASE_HISTORY.md  TODO.txt  biome.json  file.ts  gulpfile.js  jest.config.js  jest.user.config.js  lerna.json  npm-shrinkwrap.json  package-lock.json  package-lock.json.orig  package.json  package.json.orig  release.config.js  sonar-project.properties  test.ts  test.txt  tsconfig.json  tslint-packages.json  tslint-tests.json  tslint.json  typedoc.json  usstest.txt  zowe-cli.ppf
.github/: PULL_REQUEST_TEMPLATE.md  README.md  _act_event.json  _act_zowe-cli_example.yml  label-actions.yml  updateReleaseMarkdown.js  updateReleaseMarkdown_BROKEN.js
.husky/: commit-msg
.zowe/: base.json  base.yaml  zosmf.json
__mocks__/: child_process.ts  fs.js  fs.ts  os.ts  yargs.ts
__tests__/: beforeTests.js  setup.js  teardown.js  test-tsconfig.json  tsconfig.json
__types__/: hogan.d.ts  wontache.d.ts
autocompletion/: README.md  zowe  zowe.bash
dco_signoffs/: Timothy-Johnson-zowe-cli.txt  eej_prior_commits.txt
docs/: CLIReadme.md  CLI_Architecture_outdated.md  Certificate_Access_Prompting.md  Certificate_Keychain_Limitations.md  CommandFormatStandards.md  Design_for_in-memory_storage_of_secure_CLI_properties.html  Design_for_in-memory_storage_of_secure_CLI_properties.md  Design_for_securing_CLI_properties_with_NodeJS_Crypto.md  Design_for_selecting_auth_type.md  DevelopmentTips.md  Early Access - Using Global Profile Configuration.md  How_config_files_are_merged.md  MaintainerGuidelines.md  MaintainerVersioning.md  PackagesAndPluginGuidelines.md  PluginTESTINGGuidelines.md  ProfileGuidelines.md  Profiles.md  SDKGuidelines.md  TESTING.md  Using Team Configuration.md  Validation Feature - Using Global Profile Configuration.md  cli-conformance.md
fast-zowe/: Cargo.toml
gulp/: CleanupTasks.ts  DevelopmentTasks.ts  GulpHelpers.ts  (+1 more)
zowex/: .gitignore  Cargo.toml  Cross.toml  design.md
zowex/src/: comm.rs  defs.rs  main.rs  proc.rs  run.rs  test.rs  util.rs
(+1122 files in other folders)
