[package]
name = "zowe"
version = "1.1.0"
authors = ["Zowe Project"]
edition = "2018"
license = "EPL-2.0"
repository = "https://github.com/zowe/zowe-cli"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.13.1"
home = "0.5.4"
is-terminal = "0.4.4"
pathsearch = "0.2.0"
rpassword = "5.0.1"
serde = { version = "1.0.156", features = ["derive"]}
serde_json = "1.0.94"
simple-error = "0.2.3"
supports-color = "2.0.0"
sysinfo = "0.28.2"
tokio = { version = "1.28.0", features = ["io-util", "macros", "net", "rt-multi-thread"] }
whoami = "1.4.0"
yansi = "0.5.1"

[target.'cfg(windows)'.dependencies]
fslock = "0.2.1"
windows-sys = "0.48.0"

[dev-dependencies]
tokio-test = "0.4.2"
