[package]
name = "zowe"
version = "1.2.1"
authors = ["Zowe Project"]
edition = "2018"
license = "EPL-2.0"
repository = "https://github.com/zowe/zowe-cli"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.22.0"
home = "0.5.9"
is-terminal = "0.4.12"
pathsearch = "0.2.0"
rpassword = "7.3.1"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
simple-error = "0.3.0"
supports-color = "3.0.0"
sysinfo = "0.30.6"
tokio = { version = "1.36.0", features = ["io-util", "macros", "net", "rt-multi-thread"] }
whoami = "1.5.0"
yansi = "0.5.1"

[target.'cfg(windows)'.dependencies]
fslock = "0.2.1"
windows-sys = "0.52.0"

[dev-dependencies]
tokio-test = "0.4.3"
